# esp_rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  deny.toml
.cargo/: config.toml
docs/obudowa/: esp32_c3_devkit_rust_case_base.step  esp32_c3_devkit_rust_case_base.stl  esp32_c3_devkit_rust_case_fit_preview.step  esp32_c3_devkit_rust_case_fit_preview.stl  esp32_c3_devkit_rust_case_lid.step  esp32_c3_devkit_rust_case_lid.stl
docs/plytka/: esp32_c3_devkit_rust.md
docs/skrypty_obudowy/: esp32_c3_devkit_rust_case.py  esp32_c3_devkit_rust_case_cq_editor.py  open_in_cq_editor.py
scripts/: check.sh  flash.sh  quality.sh  setup_macos.sh
