[package]
edition = "2024"
name = "esp_rs"
rust-version = "1.88"
version = "0.1.0"
default-run = "esp_rs"
publish = false

[[bin]]
name = "esp_rs"
path = "./src/bin/main.rs"
test = false
bench = false

[[bin]]
name = "hello"
path = "./src/bin/hello.rs"
test = false
bench = false

[[bin]]
name = "safe_off"
path = "./src/bin/safe_off.rs"
test = false
bench = false

[[bin]]
name = "rgb_test"
path = "./src/bin/rgb_test.rs"
test = false
bench = false

[dependencies]
embedded-hal = "1.0.0"
esp-hal = { version = "~1.0.0", features = ["esp32c3", "log-04", "unstable"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3", "log-04"] }
log = "0.4.27"

esp-backtrace = { version = "0.18.0", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-hal-smartled = { version = "0.17.0", features = ["esp32c3"] }
esp-println = { version = "0.16.0", features = ["esp32c3", "log-04"] }
smart-leds = "0.4.0"

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2         # prefer slower builds but better debugging experience
lto = 'fat'
opt-level = 's'
